manifests/ingress-prometheus-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: prometheus-k8s-1
  namespace: monitoring-system
spec:
  rules:
  - host: prometheus-2.k8s.cluster.local
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s-1
          servicePort: web
